kubernetes/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: product-crud
  labels:
    app: product-crud
    environment: production
