kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-crud-ingress
  namespace: product-crud
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - 13.61.228.194.nip.io
      secretName: product-crud-tls
  rules:
    - host: 13.61.228.194.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: product-crud-frontend
                port:
                  number: 80
